--- a/MicroSocialPlatform/Views/Profile/Edit.cshtml
+++ b/MicroSocialPlatform/Views/Profile/Edit.cshtml
@@ -8,9 +8,7 @@
 
     @using (Html.BeginForm("Edit",
         "Profile",
-        method: FormMethod.Post,
-        routeValues: new { id = Model.Id }
-        ))
+        method: FormMethod.Post))
     {
         <div class="date-editare">
             <div class="about">
