--- a/MicroSocialPlatform/Views/Home/CommentPartial.cshtml
+++ b/MicroSocialPlatform/Views/Home/CommentPartial.cshtml
@@ -2,5 +2,5 @@
 
 <div class="comment">
     <p class="username">@Model.User.UserName</p>
-    <p class="post-des">@Model.Content</p>
+    <p class="comment-text">@Model.Content</p>
 </div>
