--- a/MicroSocialPlatform/wwwroot/css/Generic.css
+++ b/MicroSocialPlatform/wwwroot/css/Generic.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+@import url('https://fonts.google.com/share?selection.family=Merriweather:ital@1%7CPlayfair%20Display:ital@1');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Playfair Display', serif;
+    letter-spacing: 1px;
 }
 
 body {
