--- a/MicroSocialPlatform/Views/Post/Index.cshtml
+++ b/MicroSocialPlatform/Views/Post/Index.cshtml
@@ -3,8 +3,37 @@
 @{
     Layout = "MyLayout";
 }
+<section class="post-with-comments">
+    <div class="post">
+        <div class="post-header">
+            <img src="https://cdn.pixabay.com/photo/2015/04/23/21/59/tree-736877__480.jpg" class="user-icon" alt="">
+            <p class="username">@Model.User.UserName</p>
+            <div class="edit-post-btn">
+                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+            </div>
+        </div>
+        <div class="post-feed">
+            <div class="post-img-container">
+                <div class="text-cont">
+                    <p class="text">@Model.Content</p>
+                </div>
+                <img src="https://cdn.pixabay.com/photo/2015/04/23/21/59/tree-736877__480.jpg" alt="">
+            </div>
+        </div>
 
-<div class="show-post">
-    <h2> @Model.Title</h2>
-    <h3> @Model.Content</h3>
-</div>
+        <div class="post-detail">
+            <div class="detail-intracables">
+                <ion-icon class="lbut" name="heart-outline"></ion-icon>
+                <ion-icon class="cbut" name="chatbubble-ellipses"></ion-icon>
+            </div>
+
+            <span class="likes">3.4k</span>
+            <span class="comment-count">300</span>
+
+        </div>
+        <div class="comments">
+a
+
+        </div>
+    </div>
+</section>
