--- a/MicroSocialPlatform/Views/Shared/MyLayout.cshtml
+++ b/MicroSocialPlatform/Views/Shared/MyLayout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="~/css/Generic.css" asp-append-version="true">
     <link rel="stylesheet" type="text/css" href="~/css/MenuBar.css" asp-append-version="true">
     <link rel="stylesheet" type="text/css" href="~/css/Post.css" asp-append-version="true">
+    <link rel="stylesheet" type="text/css" href="~/css/SinglePost.css" asp-append-version="true">
     <link rel="stylesheet" type="text/css" href="~/css/ProfileView.css" asp-append-version="true">
     <link rel="stylesheet" type="text/css" href="~/css/ProfileEdit.css" asp-append-version="true">
     <link rel="stylesheet" type="text/css" href="~/css/PostEditor.css" asp-append-version="true">
