--- a/MicroSocialPlatform/wwwroot/css/SinglePost.css
+++ b/MicroSocialPlatform/wwwroot/css/SinglePost.css
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: column;
     width: 50%;
+    height: 60vh;
     margin-bottom: 30px;
     border-radius: 50px;
     border: 1px solid;
@@ -105,9 +106,9 @@
     flex-direction: column;
     position: absolute;
     float:right;
-    right: -50%;
-    width: 50%;
-    height: 50vh;
+    right: -114%;
+    width: 106%;
+    height: 97vh;
     transition: left .3s ease-out;
     border-radius: 20px 20px 20px 20px ;
     box-shadow: inset 10px 10px 10px #79525f,
@@ -121,7 +122,7 @@
     backdrop-filter: blur(10px);
 }
 .comment{
-    width: 90%;
+    width: 50%;
     margin-top: 10px;
     margin-left: 13px;
     border-radius: 0 10px 10px 10px;
@@ -149,16 +150,22 @@
     height: 40px;
     display: flex;
     position: sticky;
-    bottom:1rem;
+    position: -webkit-sticky;
+    bottom: 0;
+    margin: auto auto 0;
     align-self: flex-end;
 }
 
 #comment-input{
     width: 100%;
     height: 42px;
-    background: #9f6f80;
-    box-shadow: inset 20px 20px 20px #9f6f80,
-    inset -10px -10px 15px #49354b;
+    box-shadow: inset 10px 10px 10px #79525f,
+    15px 25px 10px rgba(138, 89, 118, 0.1),
+    15px 20px 20px rgba(151, 95, 147, 0.1),
+    inset -10px -10px 15px rgba(255,255,255,0.1);
+    background: rgba(139, 139, 139, 0.93);
+    backdrop-filter: blur(10px);
+    overflow-wrap : break-word;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     padding: 10px;
@@ -183,12 +190,15 @@
     cursor: pointer;
     border: none;
     outline: none;
-    background: #0d0d0d;
-    box-shadow: inset 20px 20px 20px #292829,
-    inset -20px -18px 25px #0d0d0d;
+    box-shadow: inset 10px 10px 10px #79525f,
+    15px 25px 10px rgba(138, 89, 118, 0.1),
+    15px 20px 20px rgba(151, 95, 147, 0.1),
+    inset -10px -10px 15px rgba(255,255,255,0.1);
+    background: rgba(139, 139, 139, 0.73);
+    backdrop-filter: blur(10px);
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
-    color: bisque;
+    color: black;
 }
 .new-post-btn{
     width: 70vh;
@@ -199,8 +209,9 @@
     inset -10px -10px 15px rgba(255,255,255,0.5);
     border-radius: 10px 300px 10px 300px;
     margin: auto auto 0;
-    background: rgba(255, 255, 255, 0.05);
+    background: rgba(139, 139, 139, 0.73);
     backdrop-filter: blur(10px);
+   
 }
 .new-post-btn a{
     text-decoration: none;
