--- a/MicroSocialPlatform/wwwroot/css/Post.css
+++ b/MicroSocialPlatform/wwwroot/css/Post.css
@@ -129,8 +129,17 @@
     overflow: scroll;
     gap:10px;
     background: rgba(255, 255, 255, 0.05);
-    backdrop-filter: blur(10px);
 }
+.comments::before {
+    content: '';
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    filter: blur(20px);
+    z-index: -1;
+}
+
 .comment{
     width: 90%;
     margin-top: 10px;
@@ -138,8 +147,17 @@
     border-radius: 0 10px 10px 10px;
     border: 1px solid;
     background: rgba(255, 255, 255, 0.05);
-    backdrop-filter: blur(10px);
     overflow-wrap : break-word;
+}
+
+.comment::before {
+    content: '';
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    filter: blur(20px);
+    z-index: -1;
 }
 
 .username{
