--- a/MicroSocialPlatform/Views/Profile/Index.cshtml
+++ b/MicroSocialPlatform/Views/Profile/Index.cshtml
@@ -17,6 +17,7 @@
                 About me : @Model.AboutMe
             </p>
             <p class="gender">Gender: @Model.Gender</p>
+            <p class="gender">Vizibilitate: @Model.Visibility</p>
         </div>
         <div class="number-card">
             <p class="friends-card">
