--- a/MicroSocialPlatform/Views/Shared/MyLayout.cshtml
+++ b/MicroSocialPlatform/Views/Shared/MyLayout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" type="text/css" href="~/css/Generic.css" asp-append-version="true">
     <link rel="stylesheet" type="text/css" href="~/css/MenuBar.css" asp-append-version="true">
+    <link rel="stylesheet" type="text/css" href="~/css/SearchBar.css" asp-append-version="true">
     <link rel="stylesheet" type="text/css" href="~/css/Post.css" asp-append-version="true">
     <link rel="stylesheet" type="text/css" href="~/css/SinglePost.css" asp-append-version="true">
     <link rel="stylesheet" type="text/css" href="~/css/ProfileView.css" asp-append-version="true">
@@ -16,8 +17,8 @@
     <title> @ViewBag.Title</title>
 </head>
 <body>
-    @Html.Partial("MenuBar"); 
-    @RenderBody()
+@Html.Partial("MenuBar");
+@RenderBody()
 
 </body>
 </html>
